src/objects/Post_Survey__c.object
<CustomObject>
    <description>The Post Event Survey captures information from the client about their impression of the event.</description>
    <fields>
        <fullName>AM_Accountabillity__c</fullName>
        <label>AM_Accountabillity</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Additional_Comments__c</fullName>
        <label>AM_Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AM_Availability__c</fullName>
        <label>AM_Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Follow_up__c</fullName>
        <label>AM_Follow-up</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Initial_Contact__c</fullName>
        <label>AM_Initial_Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Professionalism__c</fullName>
        <label>AM_Professionalism</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Understood_Needs__c</fullName>
        <label>AM_Understood_Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Training_Event__r.Opportunity_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Event Post Surveys</relationshipLabel>
        <relationshipName>Training_Event_Post_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Training_Budget__c</fullName>
        <label>Annual_Training_Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under $20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000-$100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over $100,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact to whom the Survey should be sent.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Event Post Surveys</relationshipLabel>
        <relationshipName>Training_Event_Post_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Comments__c</fullName>
        <label>Final Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Needs__c</fullName>
        <description>What training topic(s) is the customer interested in for future On-Site training?</description>
        <label>Future Training Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>The Industry/Vertical of the client organization.</description>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive/Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals/Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers/Electronics/High Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction/Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution/Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment/Media/Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial/Insurance/Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government/Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Medical/Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail/Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services/Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel/Hospitality/Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contacts__c</fullName>
        <description>Who else in your organization is responsible for staff needing training?</description>
        <label>Other Training Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_Comments__c</fullName>
        <label>Overall_Rating_Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Client&apos;s rating of their overall experience with SkillPath on a scale of 1-9 with 9 being exceptional.</description>
        <label>Overall Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyID__c</fullName>
        <label>SurveyID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TR_Content__c</fullName>
        <label>TR_Content</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Examples_Used__c</fullName>
        <label>TR_Examples_Used</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Initial_Contact__c</fullName>
        <label>TR_Initial_Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Interaction_Activities__c</fullName>
        <label>TR_Interaction/Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Overall_Comments__c</fullName>
        <label>TR_Overall_Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_Overall_Rating__c</fullName>
        <label>TR_Overall_Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Presentation__c</fullName>
        <label>TR_Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Professionalism__c</fullName>
        <label>TR_Professionalism</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Tailoring__c</fullName>
        <label>TR_Tailoring</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Understood_Needs__c</fullName>
        <label>TR_Understood_Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <formula>Training_Event__r.Trainer_Assigned__r.FirstName 
&amp;&quot; &quot; &amp; 
Training_Event__r.Trainer_Assigned__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Event Post Surveys (Trainer)</relationshipLabel>
        <relationshipName>Training_Event_Post_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <formula>Training_Event__r.Training_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <description>Each Tailoring Survey should be related to an existing Training Event.</description>
        <inlineHelpText>Each Tailoring Survey should be related to an existing Training Event.</inlineHelpText>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipName>Training_Event_Tailoring_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Use_As_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>May we use you as a reference?</description>
        <label>May we use you as a reference?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses_Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_Contact__c</fullName>
        <description>Client identified contact for additional training opportunities.</description>
        <label>Uses_Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Uses_Perpetual_Licensing_Content_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses_Perpetual_Licensing/Content_Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_Trainer_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses_Trainer_Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_Training_Webinars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses_Training_Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worbook_Quality__c</fullName>
        <label>Worbook_Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Event Post Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Trainer_Name__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Training_Event__c</columns>
        <columns>TR_Overall_Rating__c</columns>
        <columns>TR_Content__c</columns>
        <columns>TR_Examples_Used__c</columns>
        <columns>TR_Initial_Contact__c</columns>
        <columns>TR_Interaction_Activities__c</columns>
        <columns>TR_Presentation__c</columns>
        <columns>TR_Professionalism__c</columns>
        <columns>TR_Tailoring__c</columns>
        <columns>TR_Understood_Needs__c</columns>
        <columns>TR_Overall_Comments__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trainer_Name__c</field>
            <operation>contains</operation>
            <value>Ted Janusz</value>
        </filters>
        <label>Survey by Trainer</label>
    </listViews>
    <listViews>
        <fullName>Poor_Ratings</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Trainer_Name__c</columns>
        <columns>Training_Event__c</columns>
        <columns>TR_Overall_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Rating__c</field>
            <operation>lessOrEqual</operation>
            <value>7</value>
        </filters>
        <filters>
            <field>TR_Overall_Rating__c</field>
            <operation>equals</operation>
            <value>Poor</value>
        </filters>
        <label>Poor Ratings</label>
    </listViews>
    <listViews>
        <fullName>Survey_by_date</fullName>
        <columns>Trainer_Name__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Training_Event__c</columns>
        <columns>TR_Overall_Rating__c</columns>
        <columns>TR_Content__c</columns>
        <columns>TR_Examples_Used__c</columns>
        <columns>TR_Initial_Contact__c</columns>
        <columns>TR_Interaction_Activities__c</columns>
        <columns>TR_Presentation__c</columns>
        <columns>TR_Professionalism__c</columns>
        <columns>TR_Tailoring__c</columns>
        <columns>TR_Understood_Needs__c</columns>
        <columns>TR_Overall_Comments__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/5/2016 12:00 AM</value>
        </filters>
        <label>Survey by date</label>
    </listViews>
    <nameField>
        <label>Survey Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Event Post Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>